--- a/ML-Drop-TestBranch/src/app/block/block.component.html
+++ b/ML-Drop-TestBranch/src/app/block/block.component.html
@@ -1,7 +1,7 @@
 <div class="example-box" id="control_{{ blockId }}">ML-BLOCK
 
-    <!-- <div *ngIf="block.imageData">
+    <div *ngIf="block.imageData">
         <img [src]="'data:image/jpeg;base64,' + block.imageData" alt="Block Image" />
-    </div> -->
+    </div>
 
 </div>
